tests/error/comptime/check_slice_construction09.bz
// error: invalid memory range for a slice of type '[: int32]'
// note: while evaluating expression at compile time
// note: begin and end addresses point to different subobjects in this stack object
// note: begin address points to a subobject at offset 4
// note: end address is a one-past-the-end pointer with offset 4
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let t: [int32, int32];
		__builtin_slice_from_ptrs(&t[1], &t[0] + 1);
	});
}
